# doc/api.yaml
@@ -18,17 +18,18 @@ paths:
   /login:
     post:
       tags: ["Users"]
+      operationId: doLogin
       summary: Logs in the user
       description: |
         If the user does not exist, it will be created,
         and an identifier is returned.
         If the user exists, the user identifier is returned.
-      operationId: doLogin
       requestBody:
         description: User details
         content:
           application/json:
             schema:
+              description: The userid of the user
               type: object
               properties:
                 userId:
@@ -45,6 +46,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The identifier of the user
                 type: object
                 properties:
                   identifier:
@@ -62,6 +64,7 @@ paths:
       - $ref: "#/components/parameters/queryUserId"
     get:
       tags: ["Users"]
+      operationId: doSearch
       summary: Search for a user
       description: |
         Searches for a user.
@@ -87,6 +90,7 @@ paths:
     parameters:
       - $ref: "#/components/parameters/userId"
     get:
+      operationId: getUser
       tags: ["Users"]
       summary: Get a users Information
       description: |
@@ -111,6 +115,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Users"]
+      operationId: getPosts
       summary: Get the posts of a user
       description: |
         Obtain users the posts of the user with userId uid in reverse chronological order.
@@ -134,6 +139,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Users"]
+      operationId: getPostCount
       summary: Get the number of posts
       description: |
         Obtain the number of posts made by the user with the userId uid
@@ -146,6 +152,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of posts
                 type: object
                 properties:
                   count:
@@ -163,6 +170,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Users"]
+      operationId: getStream
       summary: Get the stream of a user
       description: |
         Obtain the posts made by accounts which the user with userId uid follows in reverse chronological order.
@@ -186,6 +194,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     put:
       tags: ["Users"]
+      operationId:  changeUsername
       summary: Change the username
       description: |
         Change the username of a user. 
@@ -197,6 +206,7 @@ paths:
         content:
           application/json:
             schema:
+              description: The new username
               type: object
               properties:
                 name:
@@ -207,7 +217,7 @@ paths:
                   maxLength: 30
         required: true
       responses:
-        "201": { description: Username changed successfully }
+        "204": { description: Username changed successfully }
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/UnauthorizedRequest" }
         "404": { description: User not found }
@@ -218,6 +228,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Followers"]
+      operationId:  getFollowed
       summary: Get all followed accounts
       description: |
         Get a list of all users which the user with userId uid follows.
@@ -242,6 +253,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Followers"]
+      operationId: getFollowedCount
       summary: Get the number of followed accounts
       description: |
         Obtain the number of accounts followed by the user with the userId uid
@@ -254,6 +266,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of followed
                 type: object
                 properties:
                   count:
@@ -271,6 +284,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Followers"]
+      operationId: getFollowers
       summary: Get all following accounts
       description: |
         Get a list of all users which follow the user with userId uid.
@@ -295,6 +309,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Followers"]
+      operationId: getFollowersCount
       summary: Get the number of following accounts
       description: |
         Obtain the number of accounts following the user with the userId uid
@@ -307,6 +322,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of followers
                 type: object
                 properties:
                   count:
@@ -323,8 +339,9 @@ paths:
     parameters:
       - $ref: "#/components/parameters/userId"
       - $ref: "#/components/parameters/followerId"
-    post:
+    put:
       tags: ["Followers"]
+      operationId: follow
       summary: Follow a user
       description: |
         Follow another user.
@@ -334,7 +351,10 @@ paths:
         - bearerAuth: []      
       requestBody:
         content:
-          application/json: {}
+          application/json:
+            schema:
+              description: An empty object
+              type: object
       responses:
         "204": { description: Followed user successfully }
         "400": { $ref: "#/components/responses/BadRequest" }
@@ -343,6 +363,7 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
       tags: ["Followers"]
+      operationId: unfollow
       summary: Unfollow a user
       description: |
         Unfollow another user.
@@ -362,6 +383,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Banning"]
+      operationId: getBanned
       summary: Get all users which a user banned
       description: |
         Get a list of all users which are banned by the user userId uid.
@@ -386,6 +408,7 @@ paths:
       - $ref: "#/components/parameters/userId"
     get:
       tags: ["Banning"]
+      operationId: getBannedCount
       summary: Get the number of banned accounts
       description: |
         Obtain the number of accounts the user with the userId uid has banned
@@ -398,6 +421,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of banned accounts
                 type: object
                 properties:
                   count:
@@ -414,8 +438,9 @@ paths:
     parameters:
     - $ref: "#/components/parameters/userId"
     - $ref: "#/components/parameters/bannedId"
-    post:
+    put:
       tags: ["Banning"]
+      operationId: ban
       summary: Ban a user
       description: |
         Ban another user.
@@ -425,7 +450,10 @@ paths:
         - bearerAuth: []
       requestBody:
         content:
-          application/json: {}
+          application/json:
+            schema:
+              description: An empty object
+              type: object
       responses:
         "204": { description: Banned user successfully }
         "400": { $ref: "#/components/responses/BadRequest" }
@@ -434,6 +462,7 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
       tags: ["Banning"]
+      operationId: unban
       summary: Unban a user
       description: |
         Unban another user.
@@ -449,8 +478,9 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
 
   /posts:
-    put:
+    post:
       tags: ["Posts"]
+      operationId: createPost
       summary: Create a new post
       description: |
         Post a foto with caption to a users account. 
@@ -462,6 +492,7 @@ paths:
         content:
           multipart/form-data:
             schema:
+              description: The posts metadata together with the post itself
               allOf:
                 - $ref: "#/components/schemas/postWrapper"
                 - type: object
@@ -469,14 +500,16 @@ paths:
                     image:
                       type: string
                       format: binary
+                      minLength: 1
+                      maxLength: 100000000
         required: true
       responses:
         "201":
-          description: |
-            The postId (pid) of the new post
+          description: The postId (pid) of the new post
           content:
             application/json:
               schema:
+                description: The postId (id) of the new post
                 type: object
                 properties:
                   postId:
@@ -494,6 +527,7 @@ paths:
       - $ref: "#/components/parameters/postId"
     get:
       tags: ["Posts"]
+      operationId: getPost
       summary: Get a Post
       description: |
         Returns the metadata of the post with postId pid. 
@@ -516,6 +550,7 @@ paths:
         
     delete:
       tags: ["Posts"]
+      operationId: deletePost
       summary: Delete a Post
       description: |
         Remove a post from a users account. 
@@ -534,6 +569,7 @@ paths:
       - $ref: "#/components/parameters/postId"
     get:
       tags: ["Likes"]
+      operationId: getLikes
       summary: Get the users that liked a post
       description: |
         Get a list of all users which liked the post with postId pid.
@@ -558,6 +594,7 @@ paths:
       - $ref: "#/components/parameters/postId"
     get:
       tags: ["Likes"]
+      operationId: getLikeCount
       summary: Get the number of likes 
       description: |
         Obtain the number of likes the post with the postId pid has
@@ -570,6 +607,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of likes
                 type: object
                 properties:
                   count:
@@ -586,8 +624,9 @@ paths:
     parameters:
       - $ref: "#/components/parameters/postId"
       - $ref: "#/components/parameters/userId"
-    post:
+    put:
       tags: ["Likes"]
+      operationId: like
       summary: Like a Post
       description: |
         Like a post from another users account. 
@@ -596,7 +635,10 @@ paths:
         - bearerAuth: []
       requestBody:
         content:
-          application/json: {}
+          application/json:
+            schema:
+              description: An empty object
+              type: object
       responses:
         "204": { description: Post liked successfully }
         "400": { $ref: "#/components/responses/BadRequest" }
@@ -605,6 +647,7 @@ paths:
         "500": { $ref: "#/components/responses/InternalServerError" }
     delete:
       tags: ["Likes"]
+      operationId: unlike
       summary: Unlike a Post
       description: |
         Remove a like from another users post. 
@@ -621,8 +664,9 @@ paths:
   /posts/{pid}/comments:
     parameters:
       - $ref: "#/components/parameters/postId"
-    put:
+    post:
       tags: ["Comments"]
+      operationId: createComment
       summary: Comment a post
       description: |
         Comment a post from another users account. 
@@ -637,13 +681,29 @@ paths:
             schema:
               $ref: "#/components/schemas/comment"
       responses:
-        "201": { description: Comment created successfully }
+        "201":
+          description:
+            The commentId (cid) of the new comment
+          content:
+            application/json:
+              schema:
+                description: The commentId (cid) of the new comment
+                type: object
+                properties:
+                  commentId:
+                    type: string
+                    pattern: "[a-zA-z0-9-_]{11}"
+                    example: "gocwRvLhDf8"
+                    readOnly: true
+                    minLength: 11
+                    maxLength: 11
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/UnauthorizedRequest" }
         "404": { description: Post not found }
         "500": { $ref: "#/components/responses/InternalServerError" }
     get:
       tags: ["Comments"]
+      operationId: getComments
       summary: Get the commments of a post
       description: |
         Get a list of all comments made on the post with postId pid.
@@ -668,6 +728,7 @@ paths:
       - $ref: "#/components/parameters/postId"
     get:
       tags: ["Comments"]
+      operationId: getCommentCount
       summary: Get the number of comments
       description: |
         Obtain the number of comments the post with the postId pid has
@@ -680,6 +741,7 @@ paths:
           content:
             application/json:
               schema:
+                description: The count of comments
                 type: object
                 properties:
                   count:
@@ -698,6 +760,7 @@ paths:
       - $ref: "#/components/parameters/commentId"
     delete:
       tags: ["Comments"]
+      operationId: deleteComment
       summary: Uncomment a Post
       description: |
         Delete a previously made comment from a post.
@@ -716,6 +779,7 @@ paths:
       - $ref: "#/components/parameters/pictureId"
     get:
       tags: ["Picture"]
+      operationId: getPicture
       summary: Get the picture of a Post
       description: |
         Get the picture with the pictureId pid.
@@ -728,6 +792,7 @@ paths:
           content:
             image/png:
               schema:
+                description: The picture in png format
                 type: string
                 format: binary
         "400": { $ref: "#/components/responses/BadRequest" }
@@ -757,7 +822,7 @@ components:
         minLength: 3
         maxLength: 16
       name: uid
-      in: path
+      in: query
       required: true
       description: The userId (uid) of the searching user
     userId:
@@ -835,6 +900,7 @@ components:
   schemas:
     user:
       type: object
+      description: "A user"
       properties:
         userId:
           description: "The id of the user"
@@ -866,6 +932,7 @@ components:
           example: 530
           minimum: 0
     userlist:
+      description: "A list of users"
       type: object
       properties:
         length:
@@ -882,6 +949,7 @@ components:
             $ref: "#/components/schemas/user"
     post:
       type: object
+      description: "The metadata of a post containing the pictureId (pid)"
       properties:
         poster:
           $ref: "#/components/schemas/user"
@@ -923,12 +991,14 @@ components:
         post:
           $ref: "#/components/schemas/post"
     contentStream:
+      description: "An array of posts"
       type: array
       minItems: 1
       maxItems: 60
       items: 
         $ref: "#/components/schemas/post" 
     comment:
+      description: "A comment made on a post"
       type: object
       properties:
         poster:
@@ -955,6 +1025,7 @@ components:
           minLength: 1
           maxLength: 140
     commentlist:
+      description: "A list of comments"
       type: object
       properties:
         length:
